welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:41: error: ')' expected but 'while' found.
while(!estFaceMur()){
^